<resources>
    <string name="app_name">Luxaro</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="theme">Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="system_default">System Default</string>
    <string name="firestone_error_getting_properties">Firestone: Error getting properties</string>
    <string name="firebase_realtime_db_error">Firebase: Realtime DB Error</string>
    <string name="log_in">Log In</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="log_in_failed">Log in Failed"</string>
    <string name="firebase_auth_error_colon_log_in">Firebase Auth Error: Log In</string>
    <string name="no_user_found">No user found</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="a_user_with_this_email_already_exists">A user with this email already exists</string>
    <string name="sign_up_failed_LineBreak_please_try_again_later">Sign Up Failed\nPlease try again later</string>
    <string name="firebase_auth_error_colon_sign_up">Firebase Auth Error: Sign Up</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_email_using_the_correct_format">Please enter your email using the correct format</string>
    <string name="please_enter_a_password">Please enter a password</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="name">Name</string>
    <string name="edit_name">Edit name</string>
    <string name="clear_name">Clear name</string>
    <string name="email">Email</string>
    <string name="edit_email">Edit Email</string>
    <string name="clear_email">Clear Email</string>
    <string name="password">Password</string>
    <string name="password_hidden">********</string>
    <string name="change_password">Change Password</string>
    <string name="clear_password">Clear Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="clear_confirm_password">Clear confirm Password</string>
    <string name="old_password">Old Password</string>
    <string name="clear_old_password">Clear old Password</string>
    <string name="new_password">New Password</string>
    <string name="clear_new_password">Clear New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="clear_confirm_new_password">Clear confirm New Password</string>
    <string name="name_updated">Name Updated!</string>
    <string name="failed_to_update_name">Failed to update name</string>
    <string name="password_updated">Password Updated!</string>
    <string name="failed_to_update_password">Failed to update password</string>
    <string name="old_password_is_wrong">Old password is wrong</string>
    <string name="no_new_password">No new password</string>
    <string name="new_password_is_too_short">New password is too short</string>
    <string name="new_password_and_confirm_new_password_do_not_match">New password and confirm new password do not match</string>
    <string name="failed_to_delete_account">Failed to delete account</string>
    <string name="please_enter_the_correct_password">Please enter the correct password</string>
    <string name="clear">Clear</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_profile">Profile</string>
    <string name="like">like</string>
    <string name="unlike">unlike</string>
    <string name="no_properties_to_show">No properties to show</string>
    <string name="try_checking_again_later">Try checking again later</string>
    <string name="try_liking_one">Try liking one</string>
    <string name="contact_us">Contact Us</string>
    <string name="inquiry_on">Inquiry on</string>
    <string name="call_us">Call Us</string>
    <string name="email_us">Email Us</string>
    <string name="choose_an_email_client">Choose an Email client:</string>
    <string name="text_us">Text Us</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="title_activity_search">Search</string>
    <string name="close_search">Close search</string>
    <string name="search_placeholder">Search…</string>
    <string name="clear_search">Clear search</string>
    <string name="search_for">Search for</string>
    <string name="no_properties_found">No properties found</string>
    <string name="try_searching_for_something_else">Try searching for something else</string>
</resources>