<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LogIn">

    <LinearLayout
        android:id="@+id/activity_sign_up_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="40dp"
        android:paddingBottom="80dp">

        <TextView
            android:id="@+id/logInTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/log_in"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="30dp"
            android:text="@string/email"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextTextEmailAddressLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextEmailAddressInput"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingTop="9dp"
                android:paddingEnd="12dp"
                android:paddingBottom="9dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/password"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextTextPasswordLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextPasswordInput"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingTop="9dp"
                android:paddingEnd="12dp"
                android:paddingBottom="9dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/logInButtonAndProgressBarLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:gravity="center">

            <Button
                android:id="@+id/logInButton"
                style="@style/MainButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/logInProgressBar"
                style="@style/ProgressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/footer_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/dontHaveAnAccountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_account" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:contentDescription="@string/sign_up"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:minWidth="0dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/sign_up"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>