<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:id="@+id/spaceTop"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="38sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spaceTop" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textSize="27sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.109"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextTextNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            app:cursorColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusBottomEnd="6dp"
            app:boxCornerRadiusTopStart="6dp"
            app:boxCornerRadiusBottomStart="6dp"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/medium_persian_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.194"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextNameInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="username"
                android:backgroundTint="@color/medium_persian_blue"
                android:textColor="@color/white"
                app:boxStrokeColor="@color/white"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingTop="9dp"
                android:paddingEnd="12dp"
                android:paddingBottom="9dp"
                android:textSize="23sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textSize="27sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.091"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextNameLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextTextEmailAddressLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            app:cursorColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusBottomEnd="6dp"
            app:boxCornerRadiusTopStart="6dp"
            app:boxCornerRadiusBottomStart="6dp"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/medium_persian_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.194"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextEmailAddressInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="emailAddress"
                android:backgroundTint="@color/medium_persian_blue"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                app:boxStrokeColor="@color/white"
                android:paddingStart="12dp"
                android:paddingTop="9dp"
                android:paddingEnd="12dp"
                android:paddingBottom="9dp"
                android:textSize="23sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textSize="27sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddressLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextTextPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            app:cursorColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusBottomEnd="6dp"
            app:boxCornerRadiusTopStart="6dp"
            app:boxCornerRadiusBottomStart="6dp"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/medium_persian_blue"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:backgroundTint="@color/medium_persian_blue"
                android:inputType="textPassword"
                android:textColor="@color/white"
                app:boxStrokeColor="@color/white"
                android:paddingStart="12dp"
                android:paddingTop="5dp"
                android:paddingEnd="12dp"
                android:paddingBottom="5dp"
                android:textSize="23sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/confirmPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/confirm_password"
            android:textSize="27sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.166"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextTextConfirmPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            app:cursorColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusBottomEnd="6dp"
            app:boxCornerRadiusTopStart="6dp"
            app:boxCornerRadiusBottomStart="6dp"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/medium_persian_blue"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.194"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextConfirmPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:backgroundTint="@color/medium_persian_blue"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingTop="5dp"
                android:paddingEnd="12dp"
                android:paddingBottom="5dp"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:boxStrokeColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/blue_cola"
            android:text="@string/sign_up"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextConfirmPasswordLayout" />

        <TextView
            android:id="@+id/alreadyHaveAnAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="68dp"
            android:text="@string/already_have_an_account"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

        <Button
            android:id="@+id/logInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/ateneo_blue"
            android:text="@string/log_in"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

        <Space
            android:id="@+id/spaceBottom"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alreadyHaveAnAccountTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>